--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,13 @@
 /client/.env.test.local
 /client/.env.production.local
 
+
 .env
 
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
